Build canvas and add text

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
     <head>
         <title>This is an HTML canvas</title>
+        <style media="screen">
+            body {
+                text-align: center;
+                font-family: sans-serif;
+            }
+            canvas {
+                background-color: black;
+            }
+        </style>
     </head>
     <body>
         <h1>This is an HTML canvas</h1>
@@ -12,10 +21,20 @@
             let canvas = document.getElementById("asteriods");
             let context = canvas.getContext("2d");
             context.strokeStyle = 'dimgrey';
+            context.fillStyle = 'lightgrey';
             context.lineWidth = 5;
-            context.rect(75, 75, 250, 250);
-            context.stroke();       
-        
+            context.rect(75, 50, canvas.width - 150, canvas.height - 100);
+            context.stroke();   
+            context.fill();
+            context.font = "34px Arial";
+            context.strokeStyle = 'FF2222';
+            context.fillStyle = 'FFAAAA';
+            context.lineWidth = 0.75;
+            context.textAlign = "center";
+            let msg = '2D Drawing';
+            context.fillText(msg, canvas.width /2, 100);
+            context.strokeText(msg, canvas.width / 2, 100);
+
         </script>
     </body>
 </html> 
