--- a/index.html
+++ b/index.html
@@ -1,33 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>More drawing with canvas!</title>
+        <title>More drawing with canvas</title>
         <link rel="stylesheet" href="styles.css">
+        <script src = "drawing.js"></script>
     </head>
     <body>
         <h1>More drawing with canvas!</h1>
         <canvas id="asteriods" width="400" height="400"></canvas>
-        <script>
-            let canvas = document.getElementById("asteriods");
-            let context = canvas.getContext("2d");
-
-            context.strokeStyle = "#00ff00";
-            context.lineWidth = 0.25;
-
-            for (let x = 0; x < canvas.width; x += 10) {
-                context.beginPath();
-                context.moveTo(x, 0);
-                context.lineTo(x, canvas.height);
-                context.lineWidth = (x % 50 == 0) ? 0.5 : 0.25;
-                context.stroke();
-            }
-            for (let y = 0; y < canvas.height; y += 10) {
-                context.beginPath();
-                context.moveTo(0, y);
-                context.lineTo(canvas.width, y);
-                context.lineWidth = (y % 50 == 0) ? 0.5 : 0.25;
-                context.stroke();
-            }
-        </script>
     </body>
 </html>
