--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <body>
         <h1>More drawing with canvas!</h1>
         <canvas id="asteriods" width="400" height="400"></canvas>
+        <script>
+            draw_grid(context);
+        </script>
     </body>
 </html>
